--- a/design.html
+++ b/design.html
@@ -8,11 +8,11 @@
       <meta http-equiv='expires' content='0'> 
       <meta http-equiv='pragma' content='no-cache'>
       <title>Chris Edwards Design</title>
-      <meta name="description" content="Digital Design / Multi-disciplinary Design / Graphic Design / UI / Animation / Junior Web Dev. Check out my portfolio.">
+      <meta name="description" content="Digital Design / Multidisciplinary Design / Graphic Design / UI / Animation / Junior Web Dev. Check out my portfolio.">
       <link rel="canonical" href="https://www.chrisedwardsdesign.com/">
       <meta property="og:locale" content="en_UK">
       <meta property="og:type" content="website">
-      <meta property="og:title" content="Chris Edwards - Multi-disciplinary Designer">
+      <meta property="og:title" content="Chris Edwards - Multidisciplinary Designer">
       <link rel="icon" type="image/png" href="assets/images/c-3.png">
       <link rel="stylesheet" href="styles/styles.css">
       <link rel="stylesheet" href="styles/dark-theme.css" id="theme-style">
@@ -233,7 +233,7 @@
                 <div class="mobile-menu--cv">
                   <p class="border-bottom-unset">Say hello, let's work together.</p>
                   <p class="">
-                    Manchester-based multi-disciplinary designer specialising in web design, animation and UI. With a good foundation in HTML, CSS, JavaScript and Shopify Liquid as well as some experience in 3D modeling packages including Cinema 4D and Blender. Check out my portfolio.
+                    Manchester-based multidisciplinary designer specialising in web design, animation and UI. With a good foundation in HTML, CSS, JavaScript and Shopify Liquid as well as some experience in 3D modeling packages including Cinema 4D and Blender. Check out my portfolio.
                   </p>
                   <a href="cv.html" class="border-top--one-dashed--grey" title="Link to cv page">
                     <span class="uppercase">CV / RÉSUMÉ</span>
@@ -304,7 +304,7 @@
         <div class="contact-form--intro-container">
           <div class="contact-form--intro--text-container">
             <p class="contact-form--intro--p">Say hello, let's work together.</p>
-            <p class="contact-form--intro--p">Manchester-based multi-disciplinary designer specialising in web design, animation and UI. Check out my portfolio.</p>
+            <p class="contact-form--intro--p">Manchester-based multidisciplinary designer specialising in web design, animation and UI. Check out my portfolio.</p>
           </div>
           <a href="cv.html" class="contact-form--intro--list-container border-bottom--one" title="Link to CV page">
             <div class="contact-form--intro--list">
