--- a/design.html
+++ b/design.html
@@ -149,7 +149,7 @@
               <div class="accordion-header">
                 <div class="accordion-content display-flex flex-column flex-start justify-content-start width-100 overflow-hiden max-height--header-height transition-max-height-02">
                   <div class="mobile-menu--cv">
-                    <a href="cv.html" class="border-top--none-important" title="Link to cv page">
+                    <a href="cv.html" class="accordion-content--link border-top--none-important" title="Link to cv page">
                       <span class="uppercase">CV / RÉSUMÉ</span>
                       <svg class="menu--svg-arrow-right" width="10" height="18" viewBox="0 0 10 18" fill="inherit" xmlns="http://www.w3.org/2000/svg">
                         <path d="M8.68521 16.6553L1.02513 8.99521L8.68522 1.33513" stroke="inherit" stroke-miterlimit="10"></path>
@@ -170,8 +170,8 @@
                   <path d="M0 1.44922H16" stroke="inherit"/>
                 </svg>
               </div>
-              <div class="accordion-content">
-                <a href="design.html" title="Design" class="uppercase">
+              <div class="accordion-content pointer-events-none cursor-none">
+                <a href="design.html" title="Design" class="accordion-content--link uppercase pointer-events-visible cursor-pointer z-index-3">
                   <span>
                     <div class="menu--subheader">
                       <svg class="menu--svg-box none" width="18" height="18" viewBox="0 0 18 18" fill="inherit" xmlns="http://www.w3.org/2000/svg">
@@ -186,7 +186,7 @@
                     </svg>
                   </span>
                 </a>
-                <a href="animation.html" title="Animtion" class="uppercase">
+                <a href="animation.html" title="Animtion" class="accordion-content--link uppercase pointer-events-visible cursor-pointer z-index-3">
                   <span>
                     <div class="menu--subheader">
                       <svg class="menu--svg-box none" width="18" height="18" viewBox="0 0 18 18" fill="inherit" xmlns="http://www.w3.org/2000/svg">
@@ -201,7 +201,7 @@
                     </svg>
                   </span>
                 </a>
-                <a href="ui-code.html" title="UI / Code" class="uppercase">
+                <a href="ui-code.html" title="UI / Code" class="accordion-content--link uppercase pointer-events-visible cursor-pointer z-index-3">
                   <span>
                     <div class="menu--subheader">
                       <svg class="menu--svg-box none" width="18" height="18" viewBox="0 0 18 18" fill="inherit" xmlns="http://www.w3.org/2000/svg">
@@ -235,7 +235,7 @@
                   <p class="">
                     Manchester-based multidisciplinary designer specialising in web design, animation and UI. With a good foundation in HTML, CSS, JavaScript and Shopify Liquid as well as some experience in 3D modeling packages including Cinema 4D and Blender. Check out my portfolio.
                   </p>
-                  <a href="cv.html" class="border-top--one-dashed--grey" title="Link to cv page">
+                  <a href="cv.html" class="accordion-content--link border-top--one-dashed--grey" title="Link to cv page">
                     <span class="uppercase">CV / RÉSUMÉ</span>
                     <svg class="menu--svg-arrow-right" width="10" height="18" viewBox="0 0 10 18" fill="inherit" xmlns="http://www.w3.org/2000/svg">
                       <path d="M8.68521 16.6553L1.02513 8.99521L8.68522 1.33513" stroke="inherit" stroke-miterlimit="10"></path>
