--- a/ui-code.html
+++ b/ui-code.html
@@ -90,12 +90,12 @@
               <h2 aria-label="Switch to dark mode" class="mode-switch--btn-text">LIGHT</h2>
             </div>
           </button>        
-          <div class="hide-on-mob grid-row-1">
+          <div class="hide-on-mob hide-on-mini grid-row-1">
             <a href="cv.html" title="Link to CV page">
-              <h2 class="nav--link cursor-pointer uppercase">CV</h2>
+              <h2 class="nav--link cursor-pointer">CV</h2>
             </a> 
           </div>
-          <div class="hide-on-mob grid-row-1">
+          <div class="hide-on-mob hide-on-mini hide-on-macbook grid-row-1">
             <a href="https://www.linkedin.com/in/chrisedwardsdesign" title="linkedIn Page External link to page" target="_blank">
               <h2 class="nav--link cursor-pointer uppercase">LinkedIn</h2>
             </a> 
@@ -129,12 +129,19 @@
               <path d="M8.68521 16.6553L1.02513 8.99521L8.68522 1.33513" stroke="inherit" stroke-miterlimit="10"></path>
             </svg>
           </div>
-          <div id="menu-button" aria-label="Menu open or collapse" class="mobile-menu grid-row-1">
+          <div id="menu-button" aria-label="Menu open or collapse svg-hide" class="mobile-menu grid-row-1 md:gap-s">
             <h2 class="nav--contact-h2">MENU</h2>
-            <svg id="menuPlusOpen" class="nav--menu-svg-close" width="18" height="18" viewBox="0 0 18 18" fill="inherit" xmlns="http://www.w3.org/2000/svg">
+            <svg id="menuPlusOpen" class="menu--svg-arrow-up svg-hide hide-on-mob" width="10" height="18" viewBox="0 0 10 18" fill="inherit" xmlns="http://www.w3.org/2000/svg">
+              <path d="M8.68521 16.6553L1.02513 8.99521L8.68522 1.33513" stroke="inherit" stroke-miterlimit="10"></path>
+            </svg>
+            <svg id="menuPlusClose" class="menu--svg-arrow-down hide-on-mob" width="10" height="18" viewBox="0 0 10 18" fill="inherit" xmlns="http://www.w3.org/2000/svg">
+              <path d="M8.68521 16.6553L1.02513 8.99521L8.68522 1.33513" stroke="inherit" stroke-miterlimit="10"></path>
+            </svg>
+  
+            <svg id="menuPlusOpenTwo" class="nav--menu-svg-close hide-on-desktop" width="18" height="18" viewBox="0 0 18 18" fill="inherit" xmlns="http://www.w3.org/2000/svg">
               <path d="M0.686279 9.16797H18.6853M9.68579 0.167969L9.68579 18.167" stroke="#151714"/>
             </svg>        
-            <svg id="menuPlusClose" class="nav--menu-svg-close-2 svg-hide" width="18" height="2" viewBox="0 0 16 2" fill="inherit" xmlns="http://www.w3.org/2000/svg">
+            <svg id="menuPlusCloseTwo" class="nav--menu-svg-close-2 svg-hide hide-on-desktop" width="18" height="2" viewBox="0 0 16 2" fill="inherit" xmlns="http://www.w3.org/2000/svg">
               <path d="M0 1.44922H16" stroke="inherit"/>
             </svg>
           </div>
@@ -144,21 +151,6 @@
       <nav id="mobileMenuDropDown" aria-label="Mobile navigation menu" class="mobile-menu--container">
         <div class="mobile-menu--inner">
           <div class="accordion--container">
-
-            <div id="cvAccordionLink" class="accordion-item">
-              <div class="accordion-header">
-                <div class="accordion-content display-flex flex-column flex-start justify-content-start width-100 overflow-hiden max-height--header-height transition-max-height-02">
-                  <div class="mobile-menu--cv">
-                    <a href="cv.html" class="accordion-content--link border-top--none-important" title="Link to cv page">
-                      <span class="uppercase">CV / RÉSUMÉ</span>
-                      <svg class="menu--svg-arrow-right" width="10" height="18" viewBox="0 0 10 18" fill="inherit" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M8.68521 16.6553L1.02513 8.99521L8.68522 1.33513" stroke="inherit" stroke-miterlimit="10"></path>
-                      </svg>
-                    </a>
-                  </div>
-                </div>
-              </div>
-            </div>
             
             <div class="accordion-item">
               <div class="accordion-header">
@@ -278,6 +270,36 @@
                       <button id="contact-form--submit-two" user-scalable="no" type="submit">SUBMIT</button>
                     </div>
                   </form>
+              </div>
+            </div>
+
+            <div id="cvAccordionLink" class="accordion-item">
+              <div class="accordion-header">
+                <div class="accordion-content display-flex flex-column flex-start justify-content-start width-100 overflow-hiden max-height--header-height transition-max-height-02">
+                  <div class="mobile-menu--cv">
+                    <a href="cv.html" class="accordion-content--link border-top--none-important" title="Link to cv page">
+                      <span class="uppercase">CV / RÉSUMÉ</span>
+                      <svg class="menu--svg-arrow-right" width="10" height="18" viewBox="0 0 10 18" fill="inherit" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M8.68521 16.6553L1.02513 8.99521L8.68522 1.33513" stroke="inherit" stroke-miterlimit="10"></path>
+                      </svg>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div id="cvAccordionLink" class="accordion-item">
+              <div class="accordion-header">
+                <div class="accordion-content display-flex flex-column flex-start justify-content-start width-100 overflow-hiden max-height--header-height transition-max-height-02">
+                  <div class="mobile-menu--cv">
+                    <a href="https://www.linkedin.com/in/chrisedwardsdesign" class="accordion-content--link border-top--none-important" title="linkedIn Page External link to page" target="_blank">
+                      <span class="uppercase">LINKEDIN</span>
+                      <svg class="menu--svg-arrow-right" width="10" height="18" viewBox="0 0 10 18" fill="inherit" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M8.68521 16.6553L1.02513 8.99521L8.68522 1.33513" stroke="inherit" stroke-miterlimit="10"></path>
+                      </svg>
+                    </a>
+                  </div>
+                </div>
               </div>
             </div>
 
