--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta property="og:image" content="assets/images/cdev-homapge-og-meta-2.jpg">
     <meta property="og:url" content="https://www.chrisedwardsdesign.com/">
     <meta property="og:type" content="website">
-    <link rel="icon" type="image/jpeg" href="assets/images/cdev-homapge-og-meta-2.jpg">
+    <link rel="icon" type="image/png" href="assets/images/c-3.png">
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="stylesheet" href="styles/dark-theme.css" id="theme-style">
     <link rel="stylesheet" href="https://use.typekit.net/wod0krg.css">
