--- a/animation.html
+++ b/animation.html
@@ -11,6 +11,10 @@
     <meta property="og:locale" content="en_UK">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Chris Edwards - Multidisciplinary Designer">
+    <meta property="og:description" content="Digital Design / Multidisciplinary Design / Graphic Design / UI / Animation / Junior Web Dev. Check out my portfolio.">
+    <meta property="og:image" content="assets/images/cdev-homapge-og-meta-2.jpg">
+    <meta property="og:url" content="https://www.chrisedwardsdesign.com/">
+    <meta property="og:type" content="website">
     <link rel="icon" type="image/png" href="assets/images/c-3.png">
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="stylesheet" href="styles/dark-theme.css" id="theme-style">
