--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                 <div class="mobile-menu--cv">
                   <p class="border-bottom-unset">Say hello, let's work together.</p>
                   <p class="">
-                    Manchester-based multidisciplinary designer specialising in web design, animation and UI. With a good foundation in HTML, CSS, JavaScript and Shopify Liquid as well as some experience in 3D modeling packages including Cinema 4D and Blender. Check out my portfolio.
+                    Manchester-based multidisciplinary designer with a strong focus in digital, UI, and motion design. My skillset also includes a good foundation in HTML, CSS, JavaScript, and Shopify Liquid, as well as some experience and a keen interest in 3D software packages like Blender and Cinema 4D. Check out my portfolio.
                   </p>
                   <a href="cv.html" class="accordion-content--link border-top--one-dashed--grey" title="Link to cv page">
                     <span class="uppercase">CV / RÉSUMÉ</span>
@@ -345,7 +345,7 @@
         <div class="contact-form--intro-container">
           <div class="contact-form--intro--text-container">
             <p class="contact-form--intro--p">Say hello, let's work together.</p>
-            <p class="contact-form--intro--p">Manchester-based multidisciplinary designer specialising in web design, animation and UI. Check out my portfolio.</p>
+            <p class="contact-form--intro--p">Manchester-based multidisciplinary designer with a strong focus in digital, UI, and motion design. Check out my portfolio.</p>
           </div>
           <a href="cv.html" class="contact-form--intro--list-container border-bottom--one" title="Link to CV page">
             <div class="contact-form--intro--list">
@@ -436,7 +436,7 @@
             <section id="sectionContent" class="content-s">
               <div class="content--text-desktop">
                 <p class="intro-text-desktop">
-                  Manchester-based digital designer specialising in web design, animation and UI. With a good foundation in HTML, CSS, JavaScript and Shopify Liquid as well as some experience in 3D modeling packages including Cinema 4D and Blender. Check out my portfolio or <a href="/cv.html" class="link--cv" title="Link to cv page cursor-pointer">CV / Résumé page.</a>
+                  Manchester-based multidisciplinary designer with a strong focus in digital, UI, and motion design. My skillset also includes a good foundation in HTML, CSS, JavaScript, and Shopify Liquid, as well as some experience and a keen interest in 3D software packages like Blender and Cinema 4D. Check out my portfolio or <a href="/cv.html" class="link--cv" title="Link to cv page cursor-pointer">CV / Résumé page.</a>
                 </p>
                 <div class="intro-list--container-about">
                   <ul class="intro-list--row-1">
@@ -449,7 +449,7 @@
                     <li><p>Project 2</p></li>
                     <li><p>Project 4</p></li>
                   </ul>
-                  <a href="assets/Chris-Edwards-CV-3.pdf" class="link--home-page link--main uppercase mt-s-xs pt-xs pr-s pb-xs pl-s border-outline--one-solid border-radius-half mb-component-border-width" target="_blank">
+                  <a href="assets/Chris-Edwards-CV.pdf" class="link--home-page link--main uppercase mt-s-xs pt-xs pr-s pb-xs pl-s border-outline--one-solid border-radius-half mb-component-border-width" target="_blank">
                     <svg class="contact-form--link--svg" width="17" height="18" viewBox="0 0 17 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path d="M8 1.35156L16 9.35156L8 17.3516" stroke="inherit" stroke-miterlimit="10"/>
                       <path d="M0 9.35156H16" stroke="inherit" stroke-miterlimit="10"/>
@@ -527,7 +527,7 @@
                 <!-- desktop about -->
                 <div class="grid gap-one position-relative height-fit align-self-start lg:pt-header-height g:pt-s z-index-2 lg:grid-row-1 mdt:grid-col-1-5 lgt:grid-col-1-3 lgbg:grid-col-1-2 hide-on-mob--important">
                   <p class="intro-text-desktop lg:grid-col-1-2 grid-row-1 lg:text-l lgt:text-l lgb:text-l pointer-events-visible">
-                    Manchester-based digital designer specialising in web design, animation and UI. With a good foundation in HTML, CSS, JavaScript and Shopify Liquid as well as some experience in 3D modeling packages including Cinema 4D and Blender. Check out my portfolio or <a href="/cv.html" class="link--cv" title="Link to cv page cursor-pointer">CV / Résumé page.</a>
+                    Manchester-based multidisciplinary designer with a strong focus in digital, UI, and motion design. My skillset also includes a good foundation in HTML, CSS, JavaScript, and Shopify Liquid, as well as some experience and a keen interest in 3D software packages like Blender and Cinema 4D. Check out my portfolio or <a href="/cv.html" class="link--cv" title="Link to cv page cursor-pointer">CV / Résumé page.</a>
                   </p>
                   <div class="intro-list--container lg:grid-col-1-2 grid-row-2 pointer-events-visible">
                     <ul class="intro-list--row-1">
@@ -541,7 +541,7 @@
                       <li><p>Project 4</p></li>
                     </ul>
                   </div>
-                  <a href="assets/Chris-Edwards-CV-3.pdf" class="link--home-page link--main-2 uppercase mt-xsm pt-xs pr-s pb-xs pl-s border-outline--one-solid border-radius-half mb-component-border-width lg:grid-col-1-2 grid-row-3 pointer-events-visible" target="_blank">
+                  <a href="assets/Chris-Edwards-CV.pdf" class="link--home-page link--main-2 uppercase mt-xsm pt-xs pr-s pb-xs pl-s border-outline--one-solid border-radius-half mb-component-border-width lg:grid-col-1-2 grid-row-3 pointer-events-visible" target="_blank">
                     <svg class="contact-form--link--svg" width="17" height="18" viewBox="0 0 17 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path d="M8 1.35156L16 9.35156L8 17.3516" stroke="inherit" stroke-miterlimit="10"/>
                       <path d="M0 9.35156H16" stroke="inherit" stroke-miterlimit="10"/>
@@ -555,7 +555,7 @@
                     <!-- mobile about -->
                     <div class="intro-text--container-mob">
                       <p class="intro-text-mob md:pt-s md:border-top--one">
-                        Manchester-based digital designer specialising in web design, animation and UI. With a good foundation in HTML, CSS, JavaScript and Shopify Liquid as well as some experience in 3D modeling packages including Cinema 4D and Blender. Check out my portfolio or <a href="/cv.html" class="link--cv" title="Link to cv page cursor-pointer">CV / Résumé page.</a>
+                        Manchester-based multidisciplinary designer with a strong focus in digital, UI, and motion design. My skillset also includes a good foundation in HTML, CSS, JavaScript, and Shopify Liquid, as well as some experience and a keen interest in 3D software packages like Blender and Cinema 4D. Check out my portfolio or <a href="/cv.html" class="link--cv" title="Link to cv page cursor-pointer">CV / Résumé page.</a>
                       </p>
                       <div class="intro-list--container-2">
                         <ul class="intro-list--row-1">
