--- a/cv.html
+++ b/cv.html
@@ -229,7 +229,7 @@
                 <div class="mobile-menu--cv">
                   <p class="border-bottom-unset">Say hello, let's work together.</p>
                   <p class="">
-                    Manchester-based multidisciplinary designer specialising in web design, animation and UI. With a good foundation in HTML, CSS, JavaScript and Shopify Liquid as well as some experience in 3D modeling packages including Cinema 4D and Blender. Check out my portfolio.
+                    Manchester-based multidisciplinary designer with a strong focus in digital, UI, and motion design. My skillset also includes a good foundation in HTML, CSS, JavaScript, and Shopify Liquid, as well as some experience and a keen interest in 3D software packages like Blender and Cinema 4D. Check out my portfolio.
                   </p>
                   <a href="cv.html" class="accordion-content--link border-top--one-dashed--grey" title="Link to cv page">
                     <span class="uppercase">CV / RÉSUMÉ</span>
@@ -330,7 +330,7 @@
         <div class="contact-form--intro-container">
           <div class="contact-form--intro--text-container">
             <p class="contact-form--intro--p">Say hello, let's work together.</p>
-            <p class="contact-form--intro--p">Manchester-based multidisciplinary designer specialising in web design, animation and UI. Check out my portfolio.</p>
+            <p class="contact-form--intro--p">Manchester-based multidisciplinary designer with a strong focus in digital, UI, and motion design. Check out my portfolio.</p>
           </div>
           <a href="cv.html" class="contact-form--intro--list-container border-bottom--one" title="Link to CV page">
             <div class="contact-form--intro--list">
@@ -421,9 +421,9 @@
                 <div class="content--text-desktop-pages grid-auto-cols--minmax md:pt-s lg:pt-s lgbg:pt-none md:border-top--one lg:border-top--one lgbg:border-top--none">
                   <h3 class="line-height--standard-caps md:text-xl lg:text-2xl lgmm:text-2xl mdta:grid-col-1-2 lgta:grid-col-1-3 md:grid-row-1 lg:grid-row-1 md:text-m uppercase">Background</h3>
                   <p class="intro-text-desktop mdta:grid-col-2-3 lgta:grid-col-3-5 mdta:grid-row-1 lgta:grid-row-1 lgta:grid-row-1 md:text-m lg:text-m lgbt:text-l">
-                    Manchester-based digital designer specialising in web design, animation and UI. With a good foundation in HTML, CSS, JavaScript and Shopify Liquid as well as some experience in 3D modeling packages including Cinema 4D and Blender.
+                    Manchester-based multidisciplinary designer with a strong focus in digital, UI, and motion design. My skillset also includes a good foundation in HTML, CSS, JavaScript, and Shopify Liquid, as well as some experience and a keen interest in 3D software packages like Blender and Cinema 4D.
                   </p>
-                  <a href="assets/Chris-Edwards-CV-3.pdf" class="link--cv-page link--main mdta:grid-col-2-3 lgta:grid-col-3-5 mdta:grid-row-2 lgta:grid-row-2 uppercase mt-xs pt-xs pr-s pb-xs pl-s border-outline--one-solid border-radius-half mb-component-border-width" target="_blank">
+                  <a href="assets/Chris-Edwards-CV.pdf" class="link--cv-page link--main mdta:grid-col-2-3 lgta:grid-col-3-5 mdta:grid-row-2 lgta:grid-row-2 uppercase mt-xs pt-xs pr-s pb-xs pl-s border-outline--one-solid border-radius-half mb-component-border-width" target="_blank">
                     <svg class="cv-link--hover contact-form--link--svg" width="17" height="18" viewBox="0 0 17 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path d="M8 1.35156L16 9.35156L8 17.3516" stroke="inherit" stroke-miterlimit="10"/>
                       <path d="M0 9.35156H16" stroke="inherit" stroke-miterlimit="10"/>
@@ -440,9 +440,9 @@
                   <div class="content--text-desktop-pages lg:pt-s lg:pt-none lg:border-top--one">
                     <h3 class="line-height--standard-caps md:text-xl lg:text-2xl lgmm:text-2xl lg:grid-col-1-2 lgmm:grid-col-1-3 lgbgb:grid-col-1-2 md:text-m grid-row-1 uppercase">Background</h3>
                     <p class="intro-text-desktop lg:grid-col-1-2 lgmm:grid-col-3-5 lgbg:grid-col-3-5 lgbgb:grid-col-3-5 md:text-m lg:text-m lgbt:text-l">
-                      Manchester-based digital designer specialising in web design, animation and UI. With a good foundation in HTML, CSS, JavaScript and Shopify Liquid as well as some experience in 3D modeling packages including Cinema 4D and Blender.
+                      Manchester-based multidisciplinary designer with a strong focus in digital, UI, and motion design. My skillset also includes a good foundation in HTML, CSS, JavaScript, and Shopify Liquid, as well as some experience and a keen interest in 3D software packages like Blender and Cinema 4D.
                     </p>
-                    <a href="assets/Chris-Edwards-CV-3.pdf" class="link--cv-page link--main lg:grid-col-1-2 lgmm:grid-col-3-5 lgbgb:grid-col-3-5 lgbg:grid-col-3-5 uppercase mt-xs pt-xs pr-s pb-xs pl-s border-outline--one-solid border-radius-half mb-component-border-width" target="_blank">
+                    <a href="assets/Chris-Edwards-CV.pdf" class="link--cv-page link--main lg:grid-col-1-2 lgmm:grid-col-3-5 lgbgb:grid-col-3-5 lgbg:grid-col-3-5 uppercase mt-xs pt-xs pr-s pb-xs pl-s border-outline--one-solid border-radius-half mb-component-border-width" target="_blank">
                     <svg class="cv-link--hover svg--hover contact-form--link--svg" width="17" height="18" viewBox="0 0 17 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path d="M8 1.35156L16 9.35156L8 17.3516" stroke="inherit" stroke-miterlimit="10"/>
                       <path d="M0 9.35156H16" stroke="inherit" stroke-miterlimit="10"/>
@@ -476,8 +476,8 @@
                   <div class="parallax--cv-experience--container md:pt-s pb-s pb-header-height hide-on-desktop">
                     <div class="cv-experience--container">
                       <div class="cv-bulleted-list">
-                        <p class="cv-text-background">Manchester-based digital designer specialising in web design, animation and UI. With a good foundation in HTML, CSS, JavaScript and Shopify Liquid as well as some experience in 3D modeling packages including Cinema 4D and Blender.</p>
-                        <a href="assets/Chris-Edwards-CV-3.pdf" class="link--cv-page-mob link--main--cv link-cv-mobile align-self-start uppercase mt-s-xs pt-xs pr-s pb-xs pl-s border-outline--one-solid border-radius-half" target="_blank">
+                        <p class="cv-text-background">Manchester-based multidisciplinary designer with a strong focus in digital, UI, and motion design. My skillset also includes a good foundation in HTML, CSS, JavaScript, and Shopify Liquid, as well as some experience and a keen interest in 3D software packages like Blender and Cinema 4D.</p>
+                        <a href="assets/Chris-Edwards-CV.pdf" class="link--cv-page-mob link--main--cv link-cv-mobile align-self-start uppercase mt-s-xs pt-xs pr-s pb-xs pl-s border-outline--one-solid border-radius-half" target="_blank">
                           <svg class="contact-form--link--svg" width="17" height="18" viewBox="0 0 17 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M8 1.35156L16 9.35156L8 17.3516" stroke="inherit" stroke-miterlimit="10"/>
                             <path d="M0 9.35156H16" stroke="inherit" stroke-miterlimit="10"/>
@@ -789,7 +789,7 @@
                   <div class="parallax--cv-experience--container lgbgb:grid-col-3-5 top-base md:pt-s pb-s">
                     <div class="cv-experience--container">
                       <ul class="cv-tag-list overflow-unset">
-                        <p class="cv-text-background strenghts md:text-m lg:text-m lgbt:text-l">I have a strong focus on layout, typography, animation, UX and the general organisation of information. I'm also excited by the opportunity to learn and experiment with new technologies wherever possible. My strengths lie in creating visually appealing and intuitive structures that incorporate both form and functionality, with a goal to produce designs that capture attention and enhance engagement.</p>
+                        <p class="cv-text-background strenghts md:text-m lg:text-m lgbt:text-l">Typography, motion design, UI and the general organisation of information. I'm also excited by the opportunity to learn and experiment with new technologies wherever possible. My strengths lie in creating visually appealing and intuitive structures that incorporate both form and functionality, with a goal to produce designs that capture attention and enhance engagement.</p>
                       </ul>
                     </div>
                   </div>
