--- a/index.html
+++ b/index.html
@@ -525,8 +525,8 @@
 
               <div id="sectionGraphic" class="graphic--container lg:grid-row-1 md:pb-s">
                 <!-- desktop about -->
-                <div class="grid gap-one position-relative height-fit align-self-start lg:pt-header-height g:pt-s z-index-2 lg:grid-row-1 mdt:grid-col-1-5 lgt:grid-col-1-3 lgbg:grid-col-1-2 hide-on-mob--important">
-                  <p class="intro-text-desktop lg:grid-col-1-2 grid-row-1 lg:text-l lgt:text-l lgb:text-l pointer-events-visible">
+                <div class="intro-text-container grid gap-one position-relative height-fit align-self-start lg:pt-header-height g:pt-s z-index-2 lg:grid-row-1 lgma:grid-col-1-3 mdt:grid-col-1-5 lgbg:grid-col-1-2 hide-on-mob--important">
+                  <p class="intro-text-desktop lg:grid-col-1-2 grid-row-1 pointer-events-visible">
                     Manchester-based multidisciplinary designer with a strong focus in digital, UI, and motion design. My skillset also includes a good foundation in HTML, CSS, JavaScript, and Shopify Liquid, as well as some experience and a keen interest in 3D software packages like Blender and Cinema 4D. Check out my portfolio or <a href="/cv.html" class="link--cv" title="Link to cv page cursor-pointer">CV / Résumé page.</a>
                   </p>
                   <div class="intro-list--container lg:grid-col-1-2 grid-row-2 pointer-events-visible">
@@ -550,7 +550,7 @@
                   </a>
                 </div>
                 <!-- end of desktop about -->
-                <div id="logotype--svg-container" class="logotype--svg-container md:pt-0 md:pb-s height-fit lg:align-self-start lg:grid-col-1-5 lgta:grid-col-2-5 lgm:grid-col-2-5 lg:grid-row-2 lgbg:grid-row-1 lgbg:pt-header-height lgmm:pb-header-height-minus-1rem lgm:mt-negative-header-height lgbg:mb-none">
+                <div id="logotype--svg-container" class="logotype--svg-container md:pt-0 md:pb-s height-fit lg:align-self-start lgbg:pt-header-height lgmm:pb-header-height-minus-1rem lgbg:mb-none">
                   <div class="logotype--svg-inner">
                     <!-- mobile about -->
                     <div class="intro-text--container-mob">
