--- a/design.html
+++ b/design.html
@@ -906,7 +906,7 @@
                           <span class="line-height--standard-caps hide-on-mob">/</span>
                           <span class="">
                             <p class="line-height--standard-caps hide-on-mob">Ad Creative</p>
-                            <p class="line-height--standard-caps hide-on-desktop md:text-sm">Ad Creative</p>
+                            <p class="line-height--standard-caps hide-on-desktop md:text-sm">Ad Creative & Collaboration</p>
                           </span>
                         </div>
                       </div>
@@ -947,7 +947,7 @@
                     </div>
                   </div>
 
-                  <div class="parallax--img--container pb-header-height--minus-1rem pt-s pb-header-height md:grid-col-1-5 lg:grid-col-1-5 lg:mb-minus-s lgm:height-100vh lgbg:height-fit">
+                  <div class="none parallax--img--container pb-header-height--minus-1rem pt-s pb-header-height md:grid-col-1-5 lg:grid-col-1-5 lg:mb-minus-s lgm:height-100vh lgbg:height-fit">
                     <div class="parallax--img--holder grid-col-1-5">
                       <img id=""
                       class="parallax--img-4-5 grid-col-1-3"
