--- a/design.html
+++ b/design.html
@@ -905,7 +905,7 @@
                         <div class="span-text-flex--inline-start flex-end grid-col-3-4">
                           <span class="line-height--standard-caps hide-on-mob">/</span>
                           <span class="">
-                            <p class="line-height--standard-caps hide-on-mob">Ad Creative</p>
+                            <p class="line-height--standard-caps hide-on-mob">Ad Creative & Collaboration</p>
                             <p class="line-height--standard-caps hide-on-desktop md:text-sm">Ad Creative & Collaboration</p>
                           </span>
                         </div>
