--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chris Edwards Design</title>
-    <meta name="description" content="Digital Design / Multidisciplinary Design / Graphic Design / UI / Animation / Junior Web Dev. Check out my portfolio.">
+    <meta name="description" content="Digital Design / Multidisciplinary Design / Graphic Design / UI / Animation / Motion / Junior Web Dev. Check out my portfolio.">
     <link rel="canonical" href="https://www.chrisedwardsdesign.com/">
     <meta property="og:locale" content="en_UK">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Chris Edwards - Multidisciplinary Designer">
-    <meta property="og:description" content="Digital Design / Multidisciplinary Design / Graphic Design / UI / Animation / Junior Web Dev. Check out my portfolio.">
+    <meta property="og:description" content="Digital Design / Multidisciplinary Design / Graphic Design / UI / Animation / Motion / Junior Web Dev. Check out my portfolio.">
     <meta property="og:image" content="assets/images/cdev-homapge-og-meta-2.jpg">
     <meta property="og:url" content="https://www.chrisedwardsdesign.com/">
     <meta property="og:type" content="website">
@@ -550,7 +550,7 @@
                   </a>
                 </div>
                 <!-- end of desktop about -->
-                <div id="logotype--svg-container" class="logotype--svg-container md:pt-0 md:pb-s height-fit lg:align-self-start lgbg:pt-header-height lgmm:pb-header-height-minus-1rem lgbg:mb-none">
+                <div id="logotype--svg-container" class="logotype--svg-container md:mt-negative-s md:pt-0 md:pb-s height-fit lg:align-self-start lgbg:pt-header-height lgmm:pb-header-height-minus-1rem lgbg:mb-none">
                   <div class="logotype--svg-inner">
                     <!-- mobile about -->
                     <div class="intro-text--container-mob">
