--- a/ui-code.html
+++ b/ui-code.html
@@ -2,36 +2,37 @@
 <!-- ui page -->
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chris Edwards Design</title>
-    <meta name="description" content="Digital Design / Multidisciplinary Design / Graphic Design / UI / Animation / Junior Web Dev. Check out my portfolio.">
-    <link rel="canonical" href="https://www.chrisedwardsdesign.com/">
-    <meta property="og:locale" content="en_UK">
-    <meta property="og:type" content="website">
-    <meta property="og:title" content="Chris Edwards - Multidisciplinary Designer">
-    <meta property="og:description" content="Digital Design / Multidisciplinary Design / Graphic Design / UI / Animation / Junior Web Dev. Check out my portfolio.">
-    <meta property="og:image" content="assets/images/cdev-homapge-og-meta-2.jpg">
-    <meta property="og:url" content="https://www.chrisedwardsdesign.com/">
-    <meta property="og:type" content="website">
-    <link rel="icon" type="image/png" href="assets/images/c-3.png">
-    <link rel="stylesheet" href="styles/styles.css">
-    <link rel="stylesheet" href="styles/dark-theme.css" id="theme-style">
-    <link rel="stylesheet" href="https://use.typekit.net/wod0krg.css">
-    <link rel="stylesheet" href="splide/dist/css/splide.min.css">
-    <link rel="stylesheet" href="splide-extension-video-master/dist/css/splide-extension-video.min.css">
-    <link rel="license" href="/license.txt">
-    <!-- Preload important scripts -->
-    <link rel="preload" href="splide/dist/js/splide.min.js" as="script">
-    <link rel="preload" href="splide-extension-video-master/dist/js/splide-extension-video.min.js" as="script">
-    <!-- Defer loading non-essential scripts -->
-    <script async src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
-    <script src="main.js" type="module" defer></script>
-    <!-- Defer loading essential scripts -->
-    <script src="splide/dist/js/splide.min.js" defer></script>
-    <script src="splide-extension-video-master/dist/js/splide-extension-video.min.js" defer></script>
-  </head>
+    <head>
+      <meta charset="UTF-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>Chris Edwards Design</title>
+      <meta name="description" content="Digital Design / Multidisciplinary Design / Graphic Design / UI / Animation / Motion / Junior Web Dev. Check out my portfolio.">
+      <link rel="canonical" href="https://www.chrisedwardsdesign.com/">
+      <meta property="og:locale" content="en_UK">
+      <meta property="og:type" content="website">
+      <meta property="og:title" content="Chris Edwards - Multidisciplinary Designer">
+      <meta property="og:description" content="Digital Design / Multidisciplinary Design / Graphic Design / UI / Animation / Motion / Junior Web Dev. Check out my portfolio.">
+      <meta property="og:image" content="assets/images/cdev-homapge-og-meta-2.jpg">
+      <meta property="og:url" content="https://www.chrisedwardsdesign.com/">
+      <meta property="og:type" content="website">
+      <link rel="icon" type="image/png" href="assets/images/c-3.png">
+      <link rel="stylesheet" href="styles/styles.css">
+      <link rel="stylesheet" href="styles/dark-theme.css" id="theme-style">
+      <link rel="stylesheet" href="https://use.typekit.net/wod0krg.css">
+      <link rel="stylesheet" href="splide/dist/css/splide.min.css">
+      <link rel="stylesheet" href="splide-extension-video-master/dist/css/splide-extension-video.min.css">
+      <link rel="license" href="/license.txt">
+      <!-- Preload important scripts -->
+      <link rel="preload" href="splide/dist/js/splide.min.js" as="script">
+      <link rel="preload" href="splide-extension-video-master/dist/js/splide-extension-video.min.js" as="script">
+      <!-- Defer loading non-essential scripts -->
+      <script async src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
+      <script src="main.js" type="module" defer></script>
+      <!-- Defer loading essential scripts -->
+      <script src="splide/dist/js/splide.min.js" defer></script>
+      <script src="splide-extension-video-master/dist/js/splide-extension-video.min.js" defer></script>
+    </head>
   <body class="dark-mode">
     <div id="sessionOverlay">
       <div class="nav--logotype-container cursor-none" title="Page title: CV RÉSUMÉ">
