--- a/design.html
+++ b/design.html
@@ -53,8 +53,8 @@
         </div>
         <ul class="nav--links-left--desk lg:grid-col-3-5 lgb:grid-col-2-4 lgbg:grid-col-3-5">
           <li>
-            <a href="design.html" title="Link to design collection page">
-              <h2 class="nav--link cursor-pointer">DESIGN</h2>
+            <a href="ui-code.html" title="Link to ux-code collection page">
+              <h2 class="nav--link cursor-pointer">UI / CODE</h2>
             </a>
           </li>
           <li>
@@ -63,8 +63,8 @@
             </a>
           </li>
           <li>
-            <a href="ui-code.html" title="Link to ux-code collection page">
-              <h2 class="nav--link cursor-pointer">UI / CODE</h2>
+            <a href="design.html" title="Link to design collection page">
+              <h2 class="nav--link cursor-pointer">DESIGN</h2>
             </a>
           </li>
         </ul>
@@ -1013,7 +1013,7 @@
                     </div>
                   </div>
 
-                  <div class="none parallax--img--container pb-header-height--minus-1rem pt-s pb-header-height md:grid-col-1-5 lg:grid-col-1-5 lg:mb-minus-s lgm:height-100vh lgbg:height-fit">
+                  <div class="none parallax--img--container pb-header-height--minus-1rem pt-s pb-header-height md:grid-col-1-5 lg:grid-col-1-5 lg:mb-minus-s lgbg:height-fit">
                     <div class="parallax--img--holder grid-col-1-3">
                       <img id=""
                           class="parallax--img-16-9 md:aspect-ratio-16-9 grid-col-1-3 color-bg-grey--muted-3 hide-on-mob"
@@ -1061,7 +1061,7 @@
                     </div>
                   </div>
 
-                  <div class="parallax--img--container pb-header-height--minus-1rem pt-s pb-header-height md:grid-col-1-5 lg:grid-col-1-5 lg:mb-minus-s lgm:height-100vh lgbg:height-fit">
+                  <div class="parallax--img--container pb-header-height--minus-1rem pt-s pb-header-height md:grid-col-1-5 lg:grid-col-1-5 lg:mb-minus-s lgbg:height-fit">
                     <div class="parallax--img--holder grid-col-1-5">
                       <img id=""
                           class="parallax--img-4-5 grid-col-1-3 grid-row-1-3"
